# RotorInfo

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  serialportreader.pro
arduino/: rotaryenc.ino
debian/: changelog  control  debhelper-build-stamp  rules
src/: mainwindow.cpp  mainwindow.h  mainwindow.ui
